[gd_scene load_steps=6 format=3 uid="uid://cfesndis3wmsn"]

[ext_resource type="FontFile" uid="uid://cw2hlo4jtny5h" path="res://GUI/Kenney Future.ttf" id="1_j6s3u"]
[ext_resource type="Texture2D" uid="uid://measu4slt5er" path="res://GUI/Blue/arrow_basic_n_small.svg" id="2_trvb3"]
[ext_resource type="Script" path="res://controls.gd" id="2_yhono"]
[ext_resource type="Texture2D" uid="uid://bvu4j3u688ppn" path="res://GUI/Blue/arrow_basic_s_small.svg" id="3_rb3tk"]

[sub_resource type="Theme" id="Theme_kl3sj"]
default_font = ExtResource("1_j6s3u")

[node name="Controls" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_kl3sj")
script = ExtResource("2_yhono")

[node name="LaneControl" type="Control" parent="."]
anchors_preset = 0
offset_right = 296.0
offset_bottom = 32.0

[node name="ButtonUp" type="Button" parent="LaneControl"]
layout_mode = 0
offset_left = 264.0
offset_right = 296.0
offset_bottom = 32.0
icon = ExtResource("2_trvb3")
flat = true

[node name="Label" type="Label" parent="LaneControl"]
layout_mode = 0
offset_top = 8.0
offset_right = 91.0
offset_bottom = 31.0
text = "Lanes #:"

[node name="ButtonDown" type="Button" parent="LaneControl"]
layout_mode = 0
offset_left = 200.0
offset_right = 232.0
offset_bottom = 32.0
disabled = true
icon = ExtResource("3_rb3tk")
flat = true

[node name="Value" type="Label" parent="LaneControl"]
layout_mode = 0
offset_left = 232.0
offset_top = 8.0
offset_right = 264.0
offset_bottom = 26.0
text = "1"
horizontal_alignment = 1

[node name="DensityControl" type="Control" parent="."]
anchors_preset = 0
offset_top = 40.0
offset_right = 296.0
offset_bottom = 72.0

[node name="Label" type="Label" parent="DensityControl"]
layout_mode = 0
offset_top = 8.0
offset_right = 181.0
offset_bottom = 26.0
text = "Traffic Density:"

[node name="ButtonUp" type="Button" parent="DensityControl"]
layout_mode = 0
offset_left = 264.0
offset_right = 296.0
offset_bottom = 32.0
icon = ExtResource("2_trvb3")
flat = true

[node name="ButtonDown" type="Button" parent="DensityControl"]
layout_mode = 0
offset_left = 200.0
offset_right = 232.0
offset_bottom = 32.0
icon = ExtResource("3_rb3tk")
flat = true

[node name="Value" type="Label" parent="DensityControl"]
layout_mode = 0
offset_left = 232.0
offset_top = 8.0
offset_right = 264.0
offset_bottom = 26.0
text = "5"
horizontal_alignment = 1

[node name="SidewalkControl" type="Control" parent="."]
anchors_preset = 0
offset_top = 88.0
offset_right = 296.0
offset_bottom = 112.0

[node name="Label" type="Label" parent="SidewalkControl"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 18.0
text = "Sidewalk:"

[node name="CheckButton" type="CheckButton" parent="SidewalkControl"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -101.0
offset_top = -16.0
offset_right = -57.0
offset_bottom = 8.0
grow_horizontal = 0
grow_vertical = 2
button_pressed = true

[node name="BackgroundControl" type="Control" parent="."]
anchors_preset = 0
offset_top = 128.0
offset_right = 40.0
offset_bottom = 168.0

[node name="ColorPickerButton" type="ColorPickerButton" parent="BackgroundControl"]
layout_mode = 0
offset_left = 200.0
offset_top = -3.0
offset_right = 296.0
offset_bottom = 21.0
color = Color(0.572549, 0.823529, 0.909804, 1)
edit_alpha = false

[node name="Label" type="Label" parent="BackgroundControl"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 18.0
text = "Colour:"

[connection signal="pressed" from="LaneControl/ButtonUp" to="." method="_on_lane_count_button_up_pressed"]
[connection signal="pressed" from="LaneControl/ButtonDown" to="." method="_on_lane_count_button_down_pressed"]
[connection signal="pressed" from="DensityControl/ButtonUp" to="." method="_on_button_up_pressed"]
[connection signal="pressed" from="DensityControl/ButtonDown" to="." method="_on_traffic_density_button_down_pressed"]
[connection signal="toggled" from="SidewalkControl/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="color_changed" from="BackgroundControl/ColorPickerButton" to="." method="_on_color_picker_button_color_changed"]
